chp 3 peac/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\nnshah\Desktop\chp 3 peac
-d
C:\Users\nnshah\Desktop\chp 3 peac\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\nnshah\Desktop\chp 3 peac\Car.java
<---- end of javadoc command ---->
Loading source file C:\Users\nnshah\Desktop\chp 3 peac\Car.java...
C:\Users\nnshah\Desktop\chp 3 peac\Car.java:24: error: ';' expected
        fuelEfficiency = fuelEfficiency
                                       ^
1 error
